--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>bjdog</title>
+    <link rel="shortcut icon" href="/images/html-tag-svgrepo-com.svg" type="image/x-icon">
+    <title>Lafi Raed</title>
     <script src="https://cdn.tailwindcss.com?"></script>
     <script src="https://kit.fontawesome.com/3839f90d08.js" crossorigin="anonymous"></script>
 </head>
