--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <img src="images/blurry-gradient-haikei.png" />
           </div>
           <div
+            id = "about-col-2"
             class="about-col-2 hide p-5 shadow rounded-xl hover:shadow-red-950 hover:shadow-lg hover:scale-105"
           >
             <h1 class="sub-title">About Me</h1>
