--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
               as SCRUM, tools and processes contributing to design and rollout
               of effective application solutions. Uses OOP, OOD, SOLID
               principles, and design patterns to write clean, readable, and
-              maintainable code. Known for exceptional troubleshooting skills
-              with the ability to analyze code and engineer well-researched and
-              responsive solutions.
+              maintainable code.
             </p>
 
             <div class="tab-titles">
