--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div
             id = "about-col-2"
-            class="about-col-2 hide p-5 shadow rounded-xl hover:shadow-red-950 hover:shadow-lg hover:scale-105"
+            class="about-col-2 phone-element hide p-5 shadow rounded-xl hover:shadow-red-950 hover:shadow-lg hover:scale-105"
           >
             <h1 class="sub-title">About Me</h1>
             <p>
@@ -138,7 +138,7 @@
       <div class="container">
         <h1 class="sub-title hide">My Services</h1>
         <div class="services-list">
-          <div class="hide">
+          <div id="service-1" class="hide service-tile phone-element">
             <i class="fa-solid fa-code"></i>
             <h2>Front End Developer</h2>
             <p>
@@ -150,7 +150,7 @@
               experiences.
             </p>
           </div>
-          <div class="hide">
+          <div id="service-2" class="hide service-tile phone-element">
             <i class="fas fa-crop-alt"></i>
             <h2>Back End Developer</h2>
             <p>
