--- a/index.html
+++ b/index.html
@@ -1,23 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="loading.css">
-</head>
-<body onload="myLoad()">
-    <div class="container">
-        <div class="child-div"></div>
-        <div class="child-div"></div>
-        <div class="child-div"></div>
-        <div class="child-div"></div>
-        <div class="child-div"></div>
-        <div class="child-div"></div>
-        <div class="child-div"></div>
-        <div class="child-div"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="/images/html-tag-svgrepo-com.svg"
+      type="image/x-icon"
+    />
+    <title>Lafi Raed</title>
+    <script src="https://cdn.tailwindcss.com?"></script>
+    <script
+      src="https://kit.fontawesome.com/3839f90d08.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body onload="animationLoad();pageLoad()">
+    <div class="animation-container">
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+      <div class="child-div"></div>
+    </div>
+    <div class="main-container">
+      <div class="blob blob-hide">
+        <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 310 350">
+          <path 
+            d="M156.4,339.5c31.8-2.5,59.4-26.8,80.2-48.5c28.3-29.5,40.5-47,56.1-85.1c14-34.3,20.7-75.6,2.3-111  c-18.1-34.8-55.7-58-90.4-72.3c-11.7-4.8-24.1-8.8-36.8-11.5l-0.9-0.9l-0.6,0.6c-27.7-5.8-56.6-6-82.4,3c-38.8,13.6-64,48.8-66.8,90.3c-3,43.9,17.8,88.3,33.7,128.8c5.3,13.5,10.4,27.1,14.9,40.9C77.5,309.9,111,343,156.4,339.5z"/>
+        </svg>
+      </div>
+      <div id="header" class="scroll-smooth">
+        <div class="container">
+          <nav>
+            <div class="logo hide hover:cursor-pointer animate-pulse">
+              <span class="gradient-text-1 name">R</span>aed.
+            </div>
+            <ul class="menu">
+              <li class="list hide"><a href="#header">Home</a></li>
+              <li class="list hide"><a href="#about">About</a></li>
+              <li class="list hide"><a href="#services">Services</a></li>
+              <li class="list hide"><a href="#portfolio">Portfolio</a></li>
+              <li class="list hide"><a href="#contact">Contact</a></li>
+              <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+            </ul>
+            <i class="fa-solid fa-bars" onclick="openMenu()"></i>
+          </nav>
+          <div class="header-text hide">
+            <p>Full Stack Developer</p>
+            <h1>
+              Hi, i'm
+              <span
+                class="gradient-text-1 name transition transition-all duration-500 hover:ml-6"
+                >Raed</span
+              ><br />Lafi from Tunisia
+            </h1>
+          </div>
+        </div>
+      </div>
+
+      <div id="about" class="scroll-smooth">
+        <div class="container">
+          <div class="row">
+            <div
+              id = "about-col-2"
+              class="about-col-2 phone-element hide p-5 shadow rounded-xl hover:scale-105"
+            >
+              <h1 class="sub-title name">About Me</h1>
+              <p class = "mini-name">
+                Computer science student seeking to gain experience through a
+                valuable internship. Proficient in development methodologies such
+                as SCRUM, tools and processes contributing to design and rollout
+                of effective application solutions. Uses OOP, OOD, SOLID
+                principles, and design patterns to write clean, readable, and
+                maintainable code.
+              </p>
+
+              <div class="tab-titles">
+                <p class="tab-links active-link mini-name" onclick="openTab('skills')">
+                  Skills
+                </p>
+                <p class="tab-links mini-name" onclick="openTab('experience')">
+                  Experience
+                </p>
+                <p class="tab-links mini-name" onclick="openTab('education')">Education</p>
+              </div>
+
+              <div class="tab-contents active-tab" id="skills">
+                <ul>
+                  <li class="mini-name">
+                    <span>Front End</span><br />I specialize in crafting
+                    responsive and user-friendly web interfaces using VueJs,
+                    TailwindCss, Bootstrap
+                  </li>
+                  <li class="mini-name">
+                    <span>Back End</span><br/>I specialize in creating robust and
+                    scalable server-side applications using technologies like
+                    Node.js, ExpressJs and MongoDB, ensuring seamless data
+                    management and secure API integrations.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="tab-contents" id="experience">
+                <ul>
+                  <li class="mini-name">
+                    <span>Scrum / Web developer</span><br />Worked on a University
+                    project in a SCRUM work environment ( web developer ).
+                  </li>
+                  <li class="mini-name">
+                    <span>Web Developer</span><br />Worked on a web application
+                    for a web development Hackathon.
+                  </li>
+                </ul>
+              </div>
+              <div class="tab-contents" id="education">
+                <ul>
+                  <li class="mini-name">
+                    <span>Bachelor of Computer Science - Information Systems &
+                      Software Engineering</span>
+                  </li>
+                  <li class="mini-name">
+                    <span>September 2023 - Present</span><br />Higher Institute of
+                    Computer Science of Medenine
+                  </li>
+                  <li class="mini-name">
+                    <span>September 2022 - June 2023</span><br />Faculty of
+                    Science of Monastir
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="services">
+        <div class="container">
+          <h1 class="sub-title hide mini-name">My Services</h1>
+          <div class="services-list">
+            <div id="service-1" class="hide service-tile mini-name phone-element">
+              <i class="fa-solid fa-code"></i>
+              <h2>Front End Developer</h2>
+              <p>
+                As a front-end developer, I specialize in crafting visually
+                appealing and user-friendly websites and applications. I ensure
+                seamless performance across all devices and browsers using modern
+                frameworks. I also collaborate closely with designers and back-end
+                developers to deliver cohesive and interactive digital
+                experiences.
+              </p>
+            </div>
+            <div id="service-2" class="hide service-tile mini-name phone-element">
+              <i class="fas fa-crop-alt"></i>
+              <h2>Back End Developer</h2>
+              <p>
+                As a back-end developer, I focus on building robust and scalable
+                server-side applications and databases. I specialize in
+                server-side languages, database management, and API development to
+                ensure seamless data flow and functionality. Additionally, I
+                collaborate with front-end developers to integrate and support
+                dynamic, high-performance web applications.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="portfolio">
+        <div class="container">
+          <h1 class="sub-title hide mini-name">My Work</h1>
+          <div class="work-list">
+            <div class="work hide">
+              <img src="/images/Recipe-app-preview.png" />
+              <div class="layer">
+                <h3>Recipe App</h3>
+                <p>
+                  Food recipe online platform where you can search for your
+                  favourite meals and get detailed description on each one
+                  followed by the recipe, ingredients, measures and even a Youtube
+                  video.
+                </p>
+                <a href="https://recipe-app-6q2n.onrender.com/"><i class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
+            <div class="work hide">
+              <img src="/images/wordle-preview.png" />
+              <div class="layer">
+                <h3>Wordle</h3>
+                <p>
+                  Wordle the famous word guessing game. You have six attempts to
+                  guess a five-letter word, with feedback given for each guess in
+                  the form of colored tiles indicating when letters match or
+                  occupy the correct position.
+                </p>
+                <a href="https://classic-wordle.netlify.app/"><i class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
+            <div class="work hide">
+              <img src="/images/2048-preview.png" />
+              <div class="layer">
+                <h3>2048</h3>
+                <p>
+                  2048 is a classic single-player sliding tile puzzle video game.
+                  Where you can merge tiles starting from number 2 and your goal
+                  is to reach the 2048 glorious tile.
+                </p>
+                <a href="https://classic2048.netlify.app/"><i class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
+          </div>
+          <a href="https://github.com/BrownieZzZzZz" class="btn hide mini-name">See more</a>
+        </div>
+      </div>
+      <div id="contact">
+        <div class="container">
+          <div class="row">
+            <div class="contact-left mini-name">
+              <h1 class="sub-title hide">Contact Me</h1>
+              <p class="hide">
+                <i class="fas fa-paper-plane"></i>lafiraed04@gmail.com
+              </p>
+              <p class="hide">
+                <i class="fa-solid fa-phone-square"></i>+216 56 620 075
+              </p>
+              <div class="social-icons hide">
+                <a href="https://www.facebook.com/profile.php?id=100012519400663"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+                <a href="https://www.instagram.com/lafi_raed/?hl=en"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a href="https://www.linkedin.com/in/raed-lafi-12917131a/"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a href="https://github.com/BrownieZzZzZz"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+              </div>
+              <a href="images/Raed Lafi Resume.pdf" download class="btn btn2 hide"
+                >Download Resume</a
+              >
+            </div>
+            <div class="contact-right hide mini-name">
+              <form name="submit-to-google-sheet">
+                <input type="text" name="Name" placeholder="Your Name" required />
+                <input
+                  type="email"
+                  name="Email"
+                  placeholder="Your Email"
+                  required
+                />
+                <textarea
+                  name="Message"
+                  rows="6"
+                  placeholder="Your Message"
+                ></textarea>
+                <button type="submit" class="btn btn2">Submit</button>
+              </form>
+              <span id="confirm-message" class="mini-name">Message sent successfully !</span>
+            </div>
+          </div>
+        </div>
+        <div class="copyright mini-name">
+          <p class="hide">Copyright © Raed.</p>
+        </div>
+      </div>
     </div>
 
-    <script src="loading.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
